<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MotionCam</string>

    <string name="section_smb">Dysk sieciowy (SMB)</string>
    <string name="section_motion">Wykrywanie ruchu</string>

    <string name="hint_host">Host (np. 192.168.1.10)</string>
    <string name="hint_share">Nazwa udziału (np. media)</string>
    <string name="hint_path">Podkatalog (np. motioncam)</string>
    <string name="hint_user">Użytkownik</string>
    <string name="hint_pass">Hasło</string>

    <string name="hint_threshold">Próg luminancji 0–255 (domyślnie 25)</string>
    <string name="hint_min_cells">Min. liczba aktywnych komórek (domyślnie 40, z 768)</string>
    <string name="hint_record">Długość nagrania (sek.)</string>
    <string name="hint_cooldown">Cooldown po nagraniu (sek.)</string>

    <string name="start_on_boot">Uruchamiaj automatycznie po starcie telefonu</string>

    <string name="save">Zapisz</string>
    <string name="test_upload">Testuj upload</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="saved">Zapisano</string>
    <string name="test_enqueued">Plik testowy w kolejce</string>
    <string name="service_started">Monitorowanie ruchu uruchomione</string>
    <string name="permissions_denied">Wymagane uprawnienia kamery i mikrofonu</string>

    <string name="channel_name">Monitorowanie ruchu</string>
    <string name="notif_title">MotionCam działa</string>
    <string name="notif_text">Obserwuję kamerą w poszukiwaniu ruchu</string>
</resources>
